Update private docs app backend and frontend